# monitor-cam-pi

backend/: Cargo.toml  start_dev.sh
backend/.cargo/: config
backend/docker/: Dockerfile  build.sh
tool/: create_ticket.py  pyproject.toml  tickets.yml
